# aaargh

./: .gitignore  .travis.yml  LICENSE.rst  README.rst  aaargh-0.1.tar.gz.delta  aaargh-0.1.tar.gz.id  aaargh-0.2.tar.gz.delta  aaargh-0.2.tar.gz.id  aaargh-0.3.tar.gz.delta  aaargh-0.3.tar.gz.id  aaargh-0.4.tar.gz.delta  aaargh-0.4.tar.gz.id  aaargh-0.5.tar.gz.delta  aaargh-0.5.tar.gz.id  aaargh-0.6.tar.gz.delta  aaargh-0.6.tar.gz.id  aaargh-0.7.1.tar.gz.delta  aaargh-0.7.1.tar.gz.id  aaargh-0.7.tar.gz.delta  aaargh-0.7.tar.gz.id  aaargh.py  setup.cfg  setup.py  test_aaargh.py
aaargh/: __init__.py  app.py
