
[metadata]
name = aaargh
author = Wouter Bolsterlee
author-email = uws@xs4all.nl
summary = An astonishingly awesome application argument helper
description-file = README.rst
url = "https://github.com/wbolster/aaargh"
license = BSD
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: User Interfaces

[files]
packages =
    aaargh
